--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -22,7 +22,7 @@ import Link from "../Link.astro";
 
 <header class="relative top-0 max-w-screen-2xl mx-auto transition-all duration-500 ease-in-out h-fit" id="headerNav">
   <section id="headerSection" class='top-0 left-0 md:left-auto transition-all duration-500 ease-in-out flex flex-col md:flex-row items-start md:items-center justify-start md:justify-between px-5 md:px-8 py-5 w-full fixed max-w-screen-2xl bg-opacity-80 z-20'>
-    <div class='p-0 flex flex-row items-center gap-x-2'>
+    <div class='p-0 flex flex-row items-center gap-x-4 md:gap-x-5'>
       <Image
         src="/images/profile.webp"
         width={500}
