--- a/src/styles/projectStyle.css
+++ b/src/styles/projectStyle.css
@@ -5,6 +5,18 @@
   @apply text-2xl font-semibold py-2 ;
 }
 
+#PostProjectSlot h3{
+  @apply text-xl font-semibold py-2 ;
+}
+
+#PostProjectSlot h4{
+  @apply text-lg font-semibold py-2 ;
+}
+
+#PostProjectSlot h5{
+  @apply text-base font-semibold py-2 ;
+}
+
 #PostProjectSlot p{
   @apply text-base font-light py-2 leading-relaxed text-zinc-200;
 }
@@ -24,4 +36,9 @@
 
 #PostProjectSlot pre {
   @apply px-4 py-2 rounded-lg my-2
+}
+
+
+#PostProjectSlot img {
+  @apply max-w-full md:max-w-[70%] h-auto my-2 mx-auto rounded-lg;
 }
