--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -22,7 +22,15 @@ const orderColors = [
 ];
 ---
 
-<BaseLayout pageTitle={frontmatter.title} layout="post">
+<BaseLayout
+  pageTitle={frontmatter.title}
+  layout="post"
+  metaDescription={frontmatter.description}
+  metaKeys={frontmatter.keys}
+  metaOgTitle={frontmatter.title}
+  metaOgDesc={frontmatter.description}
+  metaOgImage={frontmatter.image.url}
+>
   <header class="py-6 flex flex-col gap-8">
     <ul
       class="flex flex-col sm:flex-row gap-1.5 sm:gap-3 items-start sm:items-center"
@@ -46,7 +54,7 @@ const orderColors = [
         >
       </li>
     </ul>
-    <section class='flex flex-col gap-6'>
+    <section class="flex flex-col gap-6">
       <h1 class="text-3xl md:text-4xl font-bold text-white">
         {frontmatter.title}
       </h1>
