--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -4,7 +4,7 @@ import TwitterIcon from "../icons/TwitterIcon.astro";
 import LinkRefIcon from "./LinkRefIcon.astro";
 
 const { type, slug } = Astro.props;
-const baseLink = `https://blog.vicentejorquera.dev/articulos/persistir-scripts-entre-view-transitions-con-astro`;
+const baseLink = `https://vicentejorquera.dev/${type === 'proyectos' ? type : 'blog'}/${slug}`;
 
 const twitterMessage = type !== 'proyectos' ?
   "He leído este post de @jvicente_20 y el contenido me pareció muy interesante.👌\nAccede y comparte el contenido con el siguiente link.🔗:\n" : "Me pareció muy interesante el nuevo proyecto de @jvicente_20 🤓😎\nAccede al siguiente link y miralo por tu cuenta:"
