feat/se agrega atributo keywords para mejorar la accesibilidad

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -9,7 +9,7 @@ const { frontmatter } = Astro.props;
   pageTitle={frontmatter.title}
   layout="post"
   metaDescription={frontmatter.description}
-  metaKeys={frontmatter.keys}
+  metaKeys={frontmatter.keywords}
   metaOgTitle={frontmatter.title}
   metaOgDesc={frontmatter.description}
   metaOgImage={frontmatter.image.url}
