--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -11,7 +11,7 @@ const bothLinks = Object.keys(frontmatter.links).length;
   pageTitle={frontmatter.title}
   layout="project"
   metaDescription={frontmatter.description}
-  metaKeys={frontmatter.keys}
+  metaKeys={frontmatter.keywords}
   metaOgTitle={frontmatter.title}
   metaOgDesc={frontmatter.description}
   metaOgImage={frontmatter.image.url}
