feat/se corrige funcionamiento de generador de keywords

--- a/src/components/MetaTags.astro
+++ b/src/components/MetaTags.astro
@@ -12,8 +12,7 @@ const metaOgDescription = metaDescription
   ? metaDescription
   : "Bienvenido a mi web, soy Vicente Jorquera y soy desarrollador full stack, analista programador e ingeniero en informática";
 
-const metaKeyProcessed = metaKeys
-  ? `${metaKeys}, by vicente, by vicente jorquera, vicente jorquera`
+const metaKeyProcessed = metaKeys ? `${metaKeys},vicente jorquera,vicente,jorquera`
   : "Vicente Jorquera, Vicente, Jorquera, desarrollador, web developer, full stack developer, desarrollador en chile, desarrollador chileno, desarrollador en curicó, analista programador, ingeniero en informática, articulos de programación, astro, nextjs, react, mern, vitejs";
 
 const metaDescImg = metaOgImage ? metaOgImage : "/images/og-image.webp";
