--- a/src/components/BasicCard.astro
+++ b/src/components/BasicCard.astro
@@ -10,7 +10,7 @@ const { title, description, slug, minimal, image, type } = Astro.props
     image && (
       <a href={`/${type}/${slug}`}>
         <Image
-          class="rounded-t-lg w-full h-48 sm:h-80 lg:h-60 object-cover"
+          class="rounded-t-lg w-full h-52 sm:h-72 md:h-60 object-cover"
           src={image.url}
           alt={image.alt}
           width={1200}
@@ -22,10 +22,10 @@ const { title, description, slug, minimal, image, type } = Astro.props
   }
   <div class={`${image ? "px-4 py-3" : "p-4"}`}>
     <h3
-      class={`${minimal ? 'text-lg' : 'text-base md:text-lg'} font-medium text-zinc-100 transition-all duration-300 ease-in-out`}
+      class={`${minimal ? 'text-lg' : 'text-base lg:text-lg'} font-medium text-zinc-100 transition-all duration-300 ease-in-out`}
     >
       <a class="hover:underline" href={`/${type}/${slug}`}>{title}</a>
     </h3>
-    <p class={`text-zinc-300 ${minimal ? 'line-clamp-1' : 'line-clamp-2 text-sm md:text-base'}`}>{description}</p>
+    <p class={`text-zinc-300 ${minimal ? 'line-clamp-1' : 'line-clamp-2 text-sm lg:text-base'}`}>{description}</p>
   </div>
 </div>
