--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,10 +1,10 @@
 ---
-import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import HeaderPage from "../../components/HeaderPage.astro";
 import CardsGrid from "../../components/CardsGrid.astro";
 import BasicCard from "../../components/BasicCard.astro";
-const allPosts = await getCollection("posts");
+import { getCollectionByDate } from "../../utils/getCollectionByDate";
+const allPosts = await getCollectionByDate('posts')
 ---
 
 <BaseLayout pageTitle="Blog">
