--- a/src/pages/proyectos/index.astro
+++ b/src/pages/proyectos/index.astro
@@ -1,10 +1,10 @@
 ---
-import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import HeaderPage from "../../components/HeaderPage.astro";
 import CardsGrid from "../../components/CardsGrid.astro";
 import BasicCard from "../../components/BasicCard.astro";
-const allProjects = await getCollection("projects");
+import { getCollectionByDate } from "../../utils/getCollectionByDate";
+const allProjects = await getCollectionByDate('projects')
 ---
 
 <BaseLayout pageTitle="Proyectos">
