modify/se modifica ruta de styles

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,9 +15,9 @@ const { pageTitle, layout, metaKeys, metaDescription, metaOgDesc, metaOgTitle, m
     <meta name="generator" content={Astro.generator} />
     {
       layout === 'project' ? (
-        <link rel="stylesheet" href='/src/styles/projectStyle.css' />
+        <link rel="stylesheet" href='/styles/projectStyle.css' />
       ) : layout === 'post' && (
-        <link rel="stylesheet" href='/src/styles/postStyle.css' />
+        <link rel="stylesheet" href='/styles/postStyle.css' />
       )
     }
 
