--- a/public/styles/postStyle.css
+++ b/public/styles/postStyle.css
@@ -1,77 +1,174 @@
 /* Tag classes */
 
 .tag {
-  @apply text-sm font-medium rounded-full
+  border-radius: 9999px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500
 }
 
 .tag-link {
-  @apply px-4 py-2 block
+  display: block;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem
 }
 
 .red-tag {
-  @apply bg-red-500 text-white
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
 .blue-tag {
-  @apply bg-blue-500 text-white
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
 .green-tag {
-  @apply bg-green-600 text-white
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
 .yellow-tag {
-  @apply bg-yellow-500 text-black
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity))
 }
 
 .purple-tag {
-  @apply bg-purple-500 text-white
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
 /* Post classes */
 
 #PostSectionBlog {
-  @apply  bg-opacity-35 bg-black p-4 rounded-lg my-4
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.35;
+  padding: 1rem
 }
 
 #PostSectionBlog p {
-  @apply relative text-base py-2 leading-relaxed text-zinc-200
+  position: relative;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  line-height: 1.625;
+  --tw-text-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-text-opacity))
 }
 
-#PostSectionBlog h2{
-  @apply text-2xl font-semibold py-2 ;
+#PostSectionBlog h2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600
 }
 
-#PostSectionBlog h3{
-  @apply text-xl font-semibold py-2 ;
+#PostSectionBlog h3 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 600
 }
 
-#PostSectionBlog h4{
-  @apply text-lg font-semibold py-2 ;
+#PostSectionBlog h4 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 600
 }
 
-#PostSectionBlog h5{
-  @apply text-base font-semibold py-2 ;
+#PostSectionBlog h5 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 600
 }
 
 #PostSectionBlog p a {
-  @apply text-base font-medium underline text-lime-500 hover:text-lime-600 transition-all duration-300 ease-in-out visited:text-purple-400 active:text-blue-500;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(132 204 22 / var(--tw-text-opacity));
+  text-decoration-line: underline;
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+#PostSectionBlog p a:visited {
+  color: rgb(192 132 252 )
+}
+
+#PostSectionBlog p a:hover {
+  --tw-text-opacity: 1;
+  color: rgb(101 163 13 / var(--tw-text-opacity))
+}
+
+#PostSectionBlog p a:active {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity))
 }
 
 #PostSectionBlog ul {
-  @apply list-disc list-inside pl-4 flex flex-col gap-1.5 py-2;
+  display: flex;
+  list-style-position: inside;
+  list-style-type: disc;
+  flex-direction: column;
+  gap: 0.375rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem
 }
 
-#PostSectionBlog ul li strong{
-  @apply text-base font-semibold;
+#PostSectionBlog ul li strong {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 600
 }
-
 
 #PostSectionBlog pre {
-  @apply px-4 py-2 rounded-lg my-2
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem
 }
 
-
 #PostSectionBlog img {
-  @apply max-w-full md:max-w-[70%] h-auto my-2 mx-auto rounded-lg;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+  max-width: 100%;
+  border-radius: 0.5rem
+}
+
+@media (min-width: 768px) {
+  #PostSectionBlog img {
+    max-width: 70%
+  }
 }
