--- a/public/styles/projectStyle.css
+++ b/public/styles/projectStyle.css
@@ -1,45 +1,122 @@
 #PostProjectSlot {
-  @apply text-zinc-100 bg-opacity-35 bg-black p-4 rounded-lg my-4
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.35;
+  padding: 1rem;
+  --tw-text-opacity: 1;
+  color: rgb(244 244 245 / var(--tw-text-opacity))
 }
 
-#PostProjectSlot h2{
-  @apply text-2xl font-semibold py-2 ;
+#PostProjectSlot h2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600
 }
 
-#PostProjectSlot h3{
-  @apply text-xl font-semibold py-2 ;
+#PostProjectSlot h3 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 600
 }
 
-#PostProjectSlot h4{
-  @apply text-lg font-semibold py-2 ;
+#PostProjectSlot h4 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 600
 }
 
-#PostProjectSlot h5{
-  @apply text-base font-semibold py-2 ;
+#PostProjectSlot h5 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 600
 }
 
-#PostProjectSlot p{
-  @apply text-base font-light py-2 leading-relaxed text-zinc-200;
+#PostProjectSlot p {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 300;
+  line-height: 1.625;
+  --tw-text-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-text-opacity))
 }
 
 #PostProjectSlot p a {
-  @apply text-base font-medium underline text-lime-500 hover:text-lime-600 transition-all duration-300 ease-in-out visited:text-purple-400 active:text-blue-500;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(132 204 22 / var(--tw-text-opacity));
+  text-decoration-line: underline;
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+#PostProjectSlot p a:visited {
+  color: rgb(192 132 252 )
+}
+
+#PostProjectSlot p a:hover {
+  --tw-text-opacity: 1;
+  color: rgb(101 163 13 / var(--tw-text-opacity))
+}
+
+#PostProjectSlot p a:active {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity))
 }
 
 #PostProjectSlot ul {
-  @apply list-disc list-inside pl-4 flex flex-col gap-1.5 py-2;
+  display: flex;
+  list-style-position: inside;
+  list-style-type: disc;
+  flex-direction: column;
+  gap: 0.375rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem
 }
 
-#PostProjectSlot ul li strong{
-  @apply text-base font-semibold;
+#PostProjectSlot ul li strong {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 600
 }
-
 
 #PostProjectSlot pre {
-  @apply px-4 py-2 rounded-lg my-2
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem
 }
 
-
 #PostProjectSlot img {
-  @apply max-w-full md:max-w-[70%] h-auto my-2 mx-auto rounded-lg;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+  max-width: 100%;
+  border-radius: 0.5rem
+}
+
+@media (min-width: 768px) {
+  #PostProjectSlot img {
+    max-width: 70%
+  }
 }
