feat/se mejora el SEO del botón de acceso

--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -52,7 +52,9 @@ import Link from "../Link.astro";
       </ul>
     </nav>
   </section>
-  <button id="toggleNav" class="absolute top-[1.72rem] md:top-8 right-5 md:hidden z-20">
+  <button id="toggleNav" class="absolute top-[1.72rem] md:top-8 right-5 md:hidden z-20"
+    aria-label="Toggle navigation" aria-labelledby="toggleNav" title="Toggle navigation"
+  >
     <svg
       xmlns="http://www.w3.org/2000/svg"
       class="h-6 w-6 text-white"
