feat/se agrega mejoras del rendimiento del SEO en base a métricas tomadas en la prueba utilizando pageinsights de google

--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -24,9 +24,9 @@ import Link from "../Link.astro";
   <section id="headerSection" class='top-0 left-0 md:left-auto transition-all duration-500 ease-in-out flex flex-col md:flex-row items-start md:items-center justify-start md:justify-between px-5 md:px-8 py-5 w-full fixed max-w-screen-2xl bg-opacity-80 z-20'>
     <div class='p-0 flex flex-row items-center gap-x-4 md:gap-x-5'>
       <Image
-        src="/images/profile.webp"
-        width={500}
-        height={500}
+        src="/images/profile-compressed.webp"
+        width={100}
+        height={100}
         alt="Vicente Jorquera profile"
         class="rounded-full w-10 md:w-12 h-10 md:h-12"
         loading='eager'
