feat/se agregan logos de diferentes tamaños

--- a/src/components/MetaTags.astro
+++ b/src/components/MetaTags.astro
@@ -43,3 +43,10 @@ const metaOgTitleP = metaOgTitle ? `${metaOgTitle} | Vicente Jorquera` : "Vicent
 <meta name="twitter:title" content={metaOgTitle} />
 <meta name="twitter:description" content={metaOgDescription} />
 <meta name="twitter:image" content={metaDescImg} />
+
+
+<link rel="apple-touch-icon" sizes="192x192" href="/logo-icon-x96.png" />
+<link rel="apple-touch-icon" sizes="256x256" href="/logo-icon-48.png" />
+
+<!-- For Android -->
+<link rel="manifest" href="/manifest.json" />
