feat/se corrige error de ortografía en el inicio0

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const allProjects = await getCollectionByDate("projects", 3);
         > con más de 3 años de experiencia desarrollando soluciones full-stack
         <span class="italic">(frontend + backend + infraestructura).</span> Actualmente
         mi stack de preferencia es NextJS + TypeScript + Prisma + AWS, sin embargo,
-        cuento otras habilidades y tecnologías que encontrarás en mis proyectos y
+        cuento con otras habilidades y tecnologías que encontrarás en mis proyectos y
         posts.
       </p>
       <ul class="flex gap-8 items-center">
