--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -32,7 +32,7 @@ if (searchedFor === "blog") {
   metaKeys="404,error, not found, pagina no encontrada, no encontramos lo que buscas"
 >
   <header class="flex flex-col gap-4 my-20 text-center">
-    <h1 class="text-3xl md:text-4xl font-bold">
+    <h1 class="text-2xl md:text-4xl font-bold">
       ¡Oops! no encontramos la página que buscas.
     </h1>
     <p class="text-base lg:text-lg">
@@ -45,7 +45,7 @@ if (searchedFor === "blog") {
     </p>
   </header>
   <div class='flex flex-col gap-4'>
-    <h2 class={`text-2xl font-bold ${posts.length > 0 ? 'text-start' : 'text-center'}`}>
+    <h2 class={`text-xl  font-bold ${posts.length > 0 ? 'text-start' : 'text-center'}`}>
       {
         searchedFor === "blog"
           ? "Últimas entradas del blog"
