--- a/src/components/BasicCard.astro
+++ b/src/components/BasicCard.astro
@@ -22,7 +22,7 @@ const { title, description, slug, minimal, image, type } = Astro.props
   }
   <div class={`${image ? "px-4 py-3" : "p-4"}`}>
     <h3
-      class={`${minimal ? 'text-base md:text-lg' : 'text-base lg:text-lg'} font-medium text-zinc-100 transition-all duration-300 ease-in-out`}
+      class={`${minimal ? 'text-base md:text-lg' : 'text-base lg:text-lg'} font-semibold text-zinc-100 transition-all duration-300 ease-in-out`}
     >
       <a class="hover:underline" href={`/${type}/${slug}`}>{title}</a>
     </h3>
