fix/se corrigen errores ortograficos y de gramérica

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -27,7 +27,7 @@ if (searchedFor === "blog") {
 ---
 
 <BaseLayout
-  pageTitle="No encontrado"
+  pageTitle="Página no encontrada"
   metaDescription="La web que buscas no se encuentra en este servidor, quizá se deba a que estás buscando en las URLs de mi web anterior, te invito a seleccionar una de las opciones a continuación para continuar o puedes dirigirte manualmente la página principal."
   metaKeys="404,error, not found, pagina no encontrada, no encontramos lo que buscas"
 >
@@ -51,7 +51,7 @@ if (searchedFor === "blog") {
           ? "Últimas entradas del blog"
           : posts.length > 0
             ? "Últimos proyectos"
-            : "No han encontrado sugerencias relacionadas a tu búsqueda."
+            : "No se han encontrado sugerencias relacionadas a tu búsqueda."
       }
     </h2>
     <CardsGrid>
