fix/se corrigen errores ortograficos y de gramática

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -28,7 +28,7 @@ if (searchedFor === "blog") {
 
 <BaseLayout
   pageTitle="Página no encontrada"
-  metaDescription="La web que buscas no se encuentra en este servidor, quizá se deba a que estás buscando en las URLs de mi web anterior, te invito a seleccionar una de las opciones a continuación para continuar o puedes dirigirte manualmente la página principal."
+  metaDescription="La web que buscas no se encuentra en este servidor, quizá se deba a que estás buscando en las URLs de mi web anterior. Te invito a seleccionar una de las opciones a continuación o puedes dirigirte manualmente la página principal."
   metaKeys="404,error, not found, pagina no encontrada, no encontramos lo que buscas"
 >
   <header class="flex flex-col gap-4 my-20 text-center">
