feat/se mejora la accesibilidad de los iconos en el home

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const allProjects = await getCollectionByDate("projects", 3);
             text=""
             icon={true}
           >
-            <LinkedinIcon classes="w-7 md:w-9 fill-zinc-200" />
+            <LinkedinIcon title='Sígueme y conécta conmigo en LinkedIn' classes="w-7 md:w-9 fill-zinc-200 hover:fill-lime-200 transition-all duration-300 ease-in-out" />
           </Link>
         </li>
         <li>
@@ -49,7 +49,7 @@ const allProjects = await getCollectionByDate("projects", 3);
             text=""
             icon={true}
           >
-            <GithubIcon classes="w-7 md:w-9 fill-zinc-200" />
+            <GithubIcon title='Sígueme en Github' classes="w-7 md:w-9 fill-zinc-200 hover:fill-lime-200 transition-all duration-300 ease-in-out" />
           </Link>
         </li>
         <li>
@@ -59,7 +59,7 @@ const allProjects = await getCollectionByDate("projects", 3);
             text=""
             icon={true}
           >
-            <TwitterIcon classes="w-7 md:w-9 fill-zinc-200" />
+            <TwitterIcon title='Sígueme en Twitter' classes="w-7 md:w-9 fill-zinc-200 hover:fill-lime-200 transition-all duration-300 ease-in-out" />
           </Link>
         </li>
       </ul>
