--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -15,12 +15,12 @@ const twitterMessage = type !== 'proyectos' ?
     <LinkRefIcon
       url={`https://twitter.com/share?url=${baseLink}&text=${twitterMessage}`}
     >
-      <TwitterIcon />
+      <TwitterIcon title='Compartir en Twitter' />
     </LinkRefIcon>
   </li>
   <li>
     <LinkRefIcon url={`https://www.linkedin.com/sharing/share-offsite/?url=${baseLink}`}>
-      <LinkedinIcon />
+      <LinkedinIcon title='Compartir en LinkedIn' />
     </LinkRefIcon>
   </li>
 </ul>
