fix/se corrige detalle de años de experiencia

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const allProjects = await getCollectionByDate("projects", 3);
       <p class="text-sm md:text-base font-base text-zinc-200 leading-relaxed">
         Soy <span class="text-lime-400">Analista programador</span> y <span
           class="text-lime-400">Desarrollador web full-stack</span
-        > con más de 3 años de experiencia desarrollando soluciones full-stack
+        > con más de 1 año de experiencia desarrollando soluciones full-stack
         <span class="italic">(frontend + backend + infraestructura).</span> Actualmente
         mi stack de preferencia es NextJS + TypeScript + Prisma + AWS, sin embargo,
         cuento con otras habilidades y tecnologías que encontrarás en mis proyectos y
